feat(user):  regist  - add security config  - add common error   - add globalExceptionHandler    - add user/auth errorCode